--- a/deadknight.html
+++ b/deadknight.html
@@ -228,7 +228,7 @@
                     <td>0</td>
                 </tr>
                 <tr id="exhalationOfDarknessRow">
-                    <td><img src="/static/images/dk/exhalationofdarkness.png" alt="Exhalation of Darkness"</td>
+                    <td><img src="/static/images/dk/exhalationofdarkness.png" alt="Exhalation of Darkness"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
