--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
         <img src="/static/images/firstborn.png" alt="firstborn" class="centered-image">
         <div class="image-container">
-            <img src="/static/images/druid/icon.png" alt="druid">
-            <img src="/static/images/bd/icon.png" alt="blade dancer">
-            <img src="/static/images/ranger/icon.png" alt="ranger">
-            <img src="/static/images/warden/icon.png" alt="warden">
-            <img src="/static/images/beast/icon.png" alt="beast">
+            <a href="druid.html"><img src="/static/images/druid/icon.png" alt="druid"></a>
+            <a href="bladedancer.html"><img src="/static/images/bd/icon.png" alt="blade dancer"></a>
+            <a href="ranger.html"><img src="/static/images/ranger/icon.png" alt="ranger"></a>
+            <a href="warden.html"><img src="/static/images/warden/icon.png" alt="warden"></a>
+            <a href="beastmaster.html"><img src="/static/images/beastmaster/icon.png" alt="beastmaster"></a>
         </div>
 
         <img src="/static/images/mountainclans.png" alt="mountainclans" class="centered-image">
@@ -45,11 +45,11 @@
 
         <img src="/static/images/chosen.png" alt="chosen" class="centered-image">
         <div class="image-container">
-            <img src="/static/images/paladin/icon.png" alt="paladin">
-            <img src="/static/images/priest/icon.png" alt="priest">
-            <img src="/static/images/mage/icon.png" alt="mage">
-            <img src="/static/images/seeker/icon.png" alt="seeker">
-            <img src="/static/images/templar/icon.png" alt="templar">
+            <a href="paladin.html"><img src="/static/images/paladin/icon.png" alt="paladin"></a>
+            <a href="priest.html"><img src="/static/images/priest/icon.png" alt="priest"></a>
+            <a href="mage.html"><img src="/static/images/mage/icon.png" alt="mage"></a>
+            <a href="seeker.html"><img src="/static/images/seeker/icon.png" alt="seeker"></a>
+            <a href="templar.html"><img src="/static/images/templar/icon.png" alt="templar"></a>
         </div>
 
         <img src="/static/images/forsaken.png" alt="forsaken" class="centered-image">
