--- a/templar.html
+++ b/templar.html
@@ -38,6 +38,12 @@
                         </div>
                         <div class="form-group">
                             <div class="input-group">
+                                <img src="/static/images/icons/897.webp" class="img-fluid" alt="icon">
+                                <input type="number" class="form-control" id="magicdmg" step="any">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
                                 <img src="/static/images/icons/556.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="penetration" step="any">
                             </div>
@@ -52,18 +58,6 @@
                             <div class="input-group">
                                 <img src="/static/images/icons/89.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="health" step="any">
-                            </div>
-                        </div>
-						<div class="form-group">
-                            <div class="input-group">
-                                <img src="/static/images/icons/3828.webp" class="img-fluid" alt="icon">
-                                <input type="number" class="form-control" id="critBoost" step="any">
-                            </div>
-                        </div>
-						<div class="form-group">
-                            <div class="input-group">
-                                <img src="/static/images/reaper/rage.png" class="img-fluid" alt="icon">
-                                <input type="number" class="form-control" id="rage" min="0" max="16">
                             </div>
                         </div>
                         <div class="form-group d-flex align-items-center">
@@ -101,42 +95,6 @@
                         </div>
                         <h2>Your talents</h2>
                         <div class="form-group">
-                            <img src="/static/images/icons/5867.webp" alt="Long death">
-                            <select id="dotDmgBonus" class="form-select">
-                                <option value="0">0%</option>
-                                <option value="0.5">0.5%</option>
-                                <option value="1">1%</option>
-                                <option value="1.5">1.5%</option>
-                                <option value="2">2%</option>
-                            </select>
-
-                            <img src="/static/images/icons/5869.webp" alt="Moment of power">
-                            <select id="instDmgBonus" class="form-select">
-                                <option value="0">0%</option>
-                                <option value="0.5">0.5%</option>
-                                <option value="1">1%</option>
-                                <option value="1.5">1.5%</option>
-                                <option value="2">2%</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <img src="/static/images/icons/6990.webp" alt="Incessant penetration">
-                            <select id="dotPenBonus" class="form-select">
-                                <option value="0">0%</option>
-                                <option value="0.25">0.25%</option>
-                                <option value="0.5">0.5%</option>
-                                <option value="0.75">0.75%</option>
-                            </select>
-
-                            <img src="/static/images/icons/5865.webp" alt="Instant penetration">
-                            <select id="instPenBonus" class="form-select">
-                                <option value="0">0%</option>
-                                <option value="0.25">0.25%</option>
-                                <option value="0.5">0.5%</option>
-                                <option value="0.75">0.75%</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
                             <img src="/static/images/icons/5924.webp" alt="Bestial rage">
                             <select id="pveBonusI" class="form-select">
                                 <option value="0">0%</option>
@@ -153,44 +111,85 @@
                                 <option value="2">2%</option>
                             </select>
                         </div>
-                        <div class="form-group d-flex align-items-center">
-                            <img src="/static/images/icons/6378.webp" alt="Evisceration +">
-                            <div class="custom-control custom-switch">
-                                <input type="checkbox" class="custom-control-input" id="eviscerationBonus">
-                                <label class="custom-control-label" for="eviscerationBonus">5%</label>
-                            </div>
-                            <img src="/static/images/icons/6378.webp" alt="Evisceration + (I/II)" style="margin-left: 35px;">
-                            <select id="eviscerationBonusII" class="form-select">
+                        <div class="form-group">
+                            <img src="/static/images/icons/5410.webp" alt="Forbidden Trick +">
+                            <select id="forbiddenTrickBonus" class="form-select">
                                 <option value="0">0%</option>
-                                <option value="2.5">2.5%</option>
-                                <option value="5">5%</option>
-                                <option value="7.5">7.5%</option>
-                            </select>(I/II)
+                                <option value="3">3%</option>
+                                <option value="6">6%</option>
+                                <option value="9">9%</option>
+                            </select>
+                        </div>
+                        <div class="form-group d-flex align-items-center">
+                            <img src="/static/images/icons/5516.webp" alt="Particle of Life +">
+                            <div class="custom-control custom-switch">
+                                <input type="checkbox" class="custom-control-input" id="particleOfLifeBonus">
+                                <label class="custom-control-label" for="particleOfLifeBonus">5% phys + 5% mag</label>
+                            </div>
+                        </div>
+                        <div class="form-group d-flex align-items-center">
+                            <img src="/static/images/icons/6928.webp" alt="Relentless Defender (I)">
+                            <div class="custom-control custom-switch">
+                                <input type="checkbox" class="custom-control-input" id="isRelentless">
+                                <label class="custom-control-label" for="isRelentless">(I)</label>
+                            </div>
                         </div>
                         <div class="form-group">
-                            <img src="/static/images/icons/6392.webp" alt="Explodion of Chaos +">
-                            <select id="explodionBonus" class="form-select">
+                            <img src="/static/images/icons/5402.webp" alt="Whirlwind of Repentance + (I)">
+                            <select id="whirlwindBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="2">2%</option>
                                 <option value="4">4%</option>
                                 <option value="6">6%</option>
-                            </select>
+                            </select>(I)
                         </div>
-                        <div class="form-group d-flex align-items-center">
-                            <img src="/static/images/icons/6393.webp" alt="Devastating Flash">
-                            <div class="custom-control custom-switch">
-                                <input type="checkbox" class="custom-control-input" id="devastatingFlashBonus">
-                                <label class="custom-control-label" for="devastatingFlashBonus">15%</label>
-                            </div>
-                        </div>
-						<div class="form-group">
-                            <img src="/static/images/icons/6389.webp" alt="Annihilation + (II)">
-                            <select id="annihilationBonus" class="form-select">
+                        <div class="form-group">
+                            <img src="/static/images/icons/5401.webp" alt="Blame + (II)">
+                            <select id="blameBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="3">3%</option>
                                 <option value="6">6%</option>
                                 <option value="9">9%</option>
                             </select>(II)
+                        </div>
+                        <div class="form-group d-flex align-items-center">
+                            <img src="/static/images/icons/5406.webp" alt="Combat Support + (II)">
+                            <div class="custom-control custom-switch">
+                                <input type="checkbox" class="custom-control-input" id="combatSupportBonus">
+                                <label class="custom-control-label" for="combatSupportBonus">15% (II)</label>
+                            </div>
+                        </div>
+                        <div class="form-group d-flex align-items-center">
+                            <img src="/static/images/icons/5407.webp" alt="Harad's Teachings + (I)">
+                            <div class="custom-control custom-switch">
+                                <input type="checkbox" class="custom-control-input" id="haradsTeachingsBonusI">
+                                <label class="custom-control-label" for="haradsTeachingsBonusI">5% (I)</label>
+                            </div>
+                            <img src="/static/images/icons/5407.webp" alt="Harad's Teachings + (II)" style="margin-left: 15px;">
+                            <select id="haradsTeachingsBonusII" class="form-select">
+                                <option value="0">0%</option>
+                                <option value="1.5">1.5%</option>
+                                <option value="3">3%</option>
+                                <option value="4.5">4.5%</option>
+                            </select>Heal (II)
+                        </div>
+                        <div class="form-group d-flex align-items-center">
+                            <img src="/static/images/icons/5408.webp" alt="Mantra of Healing + (III)">
+                            <div class="custom-control custom-switch">
+                                <input type="checkbox" class="custom-control-input" id="mantraOfHealingBonus">
+                                <label class="custom-control-label" for="mantraOfHealingBonus">0.5% (III)</label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <img src="/static/images/icons/6943.webp" alt="Blessed Step (III)">
+                            <select id="blessedStep" class="form-select">
+                                <option value="0">0%</option>
+                                <option value="3">3%</option>
+                                <option value="6">6%</option>
+                                <option value="9">9%</option>
+                                <option value="12">12%</option>
+                                <option value="15">15%</option>
+                            </select>(III)
                         </div>
                     </div>
 
@@ -200,6 +199,12 @@
                             <div class="input-group">
                                 <img src="/static/images/icons/542.webp" class="img-fluid" alt="icon">
                                 <input type="number" class="form-control" id="targetPhysicalDefence">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <img src="/static/images/icons/896.webp" class="img-fluid" alt="icon">
+                                <input type="number" class="form-control" id="targetMagicalDefence">
                             </div>
                         </div>
                         <div class="form-group">
@@ -235,70 +240,88 @@
                 </tr>
             </thead>
             <tbody>
-                <tr id="eviscerationRow">
-                    <td style="display: flex; align-items: center;">
-                        <div style="display: inline-block;">
-                            <img src="/static/images/reaper/evisceration.png" alt="Evisceration">
-                        </div>
-                    </td>
+                <tr id="blameRow">
+                    <td><img src="/static/images/templar/blame.png" alt="Blame"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
-                <tr id="otherworldBoostRow">
-                    <td><img src="/static/images/reaper/otherworldboost.png" alt="Otherworld Boost"></td>
+                <tr id="whirlwindRow">
+                    <td><img src="/static/images/templar/whirlwind.png" alt="Whirlwind of Repentance"></td>
                     <td>0</td>
-                    <td>0</td>
-                    <td>0</td>
-                    <td>0</td>
-					<td>0</td>
-                </tr>
-                <tr id="annihilationRow">
-                    <td><img src="/static/images/reaper/annihilation.png" alt="Annihilation"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
-				<tr id="annihilationCritRow">
-                    <td><img src="/static/images/reaper/annihilation.png" alt="Annihilation">(Crit)</td>
+				<tr id="combatSupportRow">
+                    <td><img src="/static/images/templar/combatsupport.png" alt="Combat Support"></td>
                     <td>0</td>
-                    <td>0</td>
-                    <td>0</td>
-                    <td>0</td>
-                </tr>
-                <tr id="widescopeRow">
-                    <td><img src="/static/images/reaper/widescope.png" alt="Wide Scope"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
-                <tr id="widescopeCritRow">
-                    <td><img src="/static/images/reaper/widescope.png" alt="Wide Scope">(Crit)</td>
+                <tr id="haradsTeachingsRow">
+                    <td><img src="/static/images/templar/haradsteachings.png" alt="Harads Teachings"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
-                <tr id="underworldHandRow">
-                    <td><img src="/static/images/reaper/underworldhand.png" alt="Hand of the Underworld">(1 hit)</td>
+                <tr id="haradsTeachingsHealRow">
+                    <td><img src="/static/images/templar/haradsteachings.png" alt="Harads Teachings">(Heal)</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
-                <tr id="explosionOfChaosRow">
-                    <td><img src="/static/images/reaper/explosionofchaos.png" alt="Explosion of Chaos"></td>
+                <tr id="haradsTeachingsHealMemberRow">
+                    <td><img src="/static/images/templar/haradsteachings.png" alt="Harads Teachings">(Heal member)</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
-                <tr id="explosionOfChaosDemonRow">
-                    <td><img src="/static/images/reaper/explosionofchaos.png" alt="Explosion of Chaos">(Demon)</td>
+                <tr id="mantraOfHealingRow">
+                    <td><img src="/static/images/templar/mantraofhealing.png" alt="Mantra of Healing"></td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr id="forbiddenTrickRow">
+                    <td><img src="/static/images/templar/forbiddentrick.png" alt="Forbidden Trick"></td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr id="particleOfLifeRow">
+                    <td><img src="/static/images/templar/particleoflife.png" alt="Particle of Life"></td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr id="particleOfLifePetRow">
+                    <td><img src="/static/images/templar/particleoflife.png" alt="Particle of Life">(Pet)</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr id="brandedBySunRow">
+                    <td><img src="/static/images/templar/brandedbysun.png" alt="Branded by the Sun"></td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr id="onslaughtRow">
+                    <td><img src="/static/images/templar/onslaught.png" alt="Onslaught"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
@@ -312,6 +335,6 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="/static/js/reaper.js"></script>
+    <script src="/static/js/templar.js"></script>
 </body>
 </html>
