--- a/bladedancer.html
+++ b/bladedancer.html
@@ -51,19 +51,13 @@
                         <div class="form-group">
                             <div class="input-group">
                                 <img src="/static/images/icons/89.webp" class="img-fluid" alt="icon">
-                                <input type="number" class="form-control" id="health" step="any">
+                                <input type="number" class="form-control" id="maxHealth" step="any" placeholder="Max health">
                             </div>
                         </div>
-						<div class="form-group">
+                        <div class="form-group">
                             <div class="input-group">
-                                <img src="/static/images/icons/3828.webp" class="img-fluid" alt="icon">
-                                <input type="number" class="form-control" id="critBoost" step="any">
-                            </div>
-                        </div>
-						<div class="form-group">
-                            <div class="input-group">
-                                <img src="/static/images/reaper/rage.png" class="img-fluid" alt="icon">
-                                <input type="number" class="form-control" id="rage" min="0" max="16">
+                                <img src="/static/images/icons/89.webp" class="img-fluid" alt="icon">
+                                <input type="number" class="form-control" id="currentHealth" step="any" placeholder="Current health">
                             </div>
                         </div>
                         <div class="form-group d-flex align-items-center">
@@ -154,43 +148,73 @@
                             </select>
                         </div>
                         <div class="form-group d-flex align-items-center">
-                            <img src="/static/images/icons/6378.webp" alt="Evisceration +">
+                            <img src="/static/images/icons/1796.webp" alt="Hamstring +">
                             <div class="custom-control custom-switch">
-                                <input type="checkbox" class="custom-control-input" id="eviscerationBonus">
-                                <label class="custom-control-label" for="eviscerationBonus">5%</label>
+                                <input type="checkbox" class="custom-control-input" id="hamstringBonus">
+                                <label class="custom-control-label" for="hamstringBonus">1.5%</label>
                             </div>
-                            <img src="/static/images/icons/6378.webp" alt="Evisceration + (I/II)" style="margin-left: 35px;">
-                            <select id="eviscerationBonusII" class="form-select">
+                        </div>
+                        <div class="form-group d-flex align-items-center">
+                            <img src="/static/images/icons/3017.webp" alt="Counterattack +">
+                            <div class="custom-control custom-switch">
+                                <input type="checkbox" class="custom-control-input" id="counterattackBonus">
+                                <label class="custom-control-label" for="counterattackBonus">2%</label>
+                            </div>
+                            <img src="/static/images/icons/3017.webp" alt="Counterattack + (I)" style="margin-left: 35px;">
+                            <select id="counterattackBonusI" class="form-select">
+                                <option value="0">0%</option>
+                                <option value="1.5">1.5%</option>
+                                <option value="2">2%</option>
+                                <option value="2.5">2.5%</option>
+                            </select>(I)
+                        </div>
+                        <div class="form-group">
+                            <img src="/static/images/icons/2887.webp" alt="Magic Transformation +">
+                            <select id="magicTransformBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="2.5">2.5%</option>
                                 <option value="5">5%</option>
                                 <option value="7.5">7.5%</option>
-                            </select>(I/II)
+                            </select>
+                        </div>
+                        <div class="form-group d-flex align-items-center">
+                            <img src="/static/images/icons/6249.webp" alt="Bastion of Ancestors">
+                            <div class="custom-control custom-switch">
+                                <input type="checkbox" class="custom-control-input" id="bastionBonus">
+                                <label class="custom-control-label" for="bastionBonus">20%</label>
+                            </div>
+                        </div>
+                        <div class="form-group d-flex align-items-center">
+                            <img src="/static/images/icons/6568.webp" alt="Mark of the Blade + (I)">
+                            <div class="custom-control custom-switch">
+                                <input type="checkbox" class="custom-control-input" id="markOfBladeBonus">
+                                <label class="custom-control-label" for="markOfBladeBonus">0.5% (I)</label>
+                            </div>
+                        </div>
+                        <div class="form-group d-flex align-items-center">
+                            <img src="/static/images/icons/453.webp" alt="Flash Strike + (II)">
+                            <div class="custom-control custom-switch">
+                                <input type="checkbox" class="custom-control-input" id="strikeBonus">
+                                <label class="custom-control-label" for="strikeBonus">8% (II)</label>
+                            </div>
                         </div>
                         <div class="form-group">
-                            <img src="/static/images/icons/6392.webp" alt="Explodion of Chaos +">
-                            <select id="explodionBonus" class="form-select">
+                            <img src="/static/images/icons/6567.webp" alt="Vortex Strike + (II)">
+                            <select id="vortexStrikeBonus" class="form-select">
                                 <option value="0">0%</option>
                                 <option value="2">2%</option>
                                 <option value="4">4%</option>
                                 <option value="6">6%</option>
-                            </select>
-                        </div>
-                        <div class="form-group d-flex align-items-center">
-                            <img src="/static/images/icons/6393.webp" alt="Devastating Flash">
-                            <div class="custom-control custom-switch">
-                                <input type="checkbox" class="custom-control-input" id="devastatingFlashBonus">
-                                <label class="custom-control-label" for="devastatingFlashBonus">15%</label>
-                            </div>
-                        </div>
-						<div class="form-group">
-                            <img src="/static/images/icons/6389.webp" alt="Annihilation + (II)">
-                            <select id="annihilationBonus" class="form-select">
-                                <option value="0">0%</option>
-                                <option value="3">3%</option>
-                                <option value="6">6%</option>
-                                <option value="9">9%</option>
                             </select>(II)
+                        </div>
+                        <div class="form-group">
+                            <img src="/static/images/icons/3003.webp" alt="Sonic Boom + (III)">
+                            <select id="sonicBoomBonus" class="form-select">
+                                <option value="0">0%</option>
+                                <option value="1">1%</option>
+                                <option value="2">2%</option>
+                                <option value="3">3%</option>
+                            </select>(III)
                         </div>
                     </div>
 
@@ -235,10 +259,10 @@
                 </tr>
             </thead>
             <tbody>
-                <tr id="eviscerationRow">
+                <tr id="flashStrikeRow">
                     <td style="display: flex; align-items: center;">
                         <div style="display: inline-block;">
-                            <img src="/static/images/reaper/evisceration.png" alt="Evisceration">
+                            <img src="/static/images/bd/flashstrike.png" alt="Flash Strike">
                         </div>
                     </td>
                     <td>0</td>
@@ -247,58 +271,60 @@
                     <td>0</td>
                     <td>0</td>
                 </tr>
-                <tr id="otherworldBoostRow">
-                    <td><img src="/static/images/reaper/otherworldboost.png" alt="Otherworld Boost"></td>
+                <tr id="vortexBladeRow">
+                    <td><img src="/static/images/bd/vortexblade.png" alt="Vortex Blade"></td>
                     <td>0</td>
-                    <td>0</td>
-                    <td>0</td>
-                    <td>0</td>
-					<td>0</td>
-                </tr>
-                <tr id="annihilationRow">
-                    <td><img src="/static/images/reaper/annihilation.png" alt="Annihilation"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
-				<tr id="annihilationCritRow">
-                    <td><img src="/static/images/reaper/annihilation.png" alt="Annihilation">(Crit)</td>
+                <tr id="vortexBladeBoostRow">
+                    <td><img src="/static/images/bd/vortexblade.png" alt="Vortex Blade">(Boosted)</td>
                     <td>0</td>
-                    <td>0</td>
-                    <td>0</td>
-                    <td>0</td>
-                </tr>
-                <tr id="widescopeRow">
-                    <td><img src="/static/images/reaper/widescope.png" alt="Wide Scope"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
-                <tr id="widescopeCritRow">
-                    <td><img src="/static/images/reaper/widescope.png" alt="Wide Scope">(Crit)</td>
+                <tr id="hamstringRow">
+                    <td><img src="/static/images/bd/hamstring.png" alt="Hamstring"></td>
                     <td>0</td>
-                    <td>0</td>
-                    <td>0</td>
-                    <td>0</td>
-                </tr>
-                <tr id="underworldHandRow">
-                    <td><img src="/static/images/reaper/underworldhand.png" alt="Hand of the Underworld">(1 hit)</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
-                <tr id="explosionOfChaosRow">
-                    <td><img src="/static/images/reaper/explosionofchaos.png" alt="Explosion of Chaos"></td>
+                <tr id="magicTransformRow">
+                    <td><img src="/static/images/bd/magictransform.png" alt="Magic Transformation"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
                 </tr>
-                <tr id="explosionOfChaosDemonRow">
-                    <td><img src="/static/images/reaper/explosionofchaos.png" alt="Explosion of Chaos">(Demon)</td>
+                <tr id="sonicBoomRow">
+                    <td><img src="/static/images/bd/sonicboom.png" alt="Sonic Boom"></td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr id="counterattackRow">
+                    <td><img src="/static/images/bd/counterattack.png" alt="Counterattack"></td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr id="strikeHurricaneRow">
+                    <td><img src="/static/images/bd/strikehurricane.png" alt="Strike Hurricane">(Total)</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr id="markOfBladeRow">
+                    <td><img src="/static/images/bd/markofblade.png" alt="Mark of the Blade"></td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
@@ -312,6 +338,6 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="/static/js/reaper.js"></script>
+    <script src="/static/js/bladedancer.js"></script>
 </body>
 </html>
