--- a/rogue.html
+++ b/rogue.html
@@ -107,7 +107,7 @@
                                 <option value="2">2%</option>
                             </select>
                         </div>
-                        <!--<div class="form-group">
+                        <div class="form-group">
                             <img src="/static/images/icons/6990.webp" alt="Incessant penetration">
                             <select id="dotPenBonus" class="form-select">
                                 <option value="0">0%</option>
@@ -123,7 +123,7 @@
                                 <option value="0.5">0.5%</option>
                                 <option value="0.75">0.75%</option>
                             </select>
-                        </div>-->
+                        </div>
                         <div class="form-group">
                             <img src="/static/images/icons/5924.webp" alt="Bestial rage">
                             <select id="pveBonusI" class="form-select">
