--- a/about.html
+++ b/about.html
@@ -10,20 +10,24 @@
 <body>
     <div class="container">
         <nav class="navbar navbar-expand-md navbar-light bg-light">
+            <button id="toggle-theme-button" style="padding: 0; border: none; background: none; margin-right: 5px;">
+                <img src="/static/images/theme.png" alt="Change theme" style="margin: 0">
+            </button>
             <a class="navbar-brand" href="index.html">
                 Warspear Skills Calculator
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li>
+                    <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                 </ul>
             </div>
+            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
         </nav>
+
 		<img src="/static/images/me.png" style="width: 100px; height: 100px;">
 		<h2>RU</h2>
 		<p>Этот калькулятор создан для расчёта урона навыков персонажей. Он учитывает основные характеристики, тип цели и наличие талантов. При расчётах возможна погрешность в 1-2 единицы урона. Это не критично, если вы не ботан.</p>
@@ -38,5 +42,6 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="/static/js/theme.js"></script>
 </body>
 </html>
