--- a/rogue.html
+++ b/rogue.html
@@ -172,6 +172,13 @@
                                 <label class="custom-control-label" for="flurryBonus">7% (I)</label>
                             </div>
                         </div>
+                        <div class="form-group d-flex align-items-center">
+                            <img src="/static/images/icons/3037.webp" alt="Ricochet +">
+                            <div class="custom-control custom-switch">
+                                <input type="checkbox" class="custom-control-input" id="ricochetBonus">
+                                <label class="custom-control-label" for="ricochetBonus">5% (III)</label>
+                            </div>
+                        </div>
                         <div class="form-group">
                             <img src="/static/images/icons/6859.webp" alt="Blade echo">
                             <select id="bladeEchoBonus" class="form-select">
