--- a/about.html
+++ b/about.html
@@ -32,11 +32,11 @@
 		<h2>RU</h2>
 		<p>Этот калькулятор создан для расчёта урона навыков персонажей. Он учитывает основные характеристики, тип цели и наличие талантов. При расчётах возможна погрешность в 1-2 единицы урона. Это не критично, если вы не ботан.</p>
 		<p>При вводе значений, указывайте напрямую числовое значение процентов (например 30 свирепости). НО, в полях ввода защиты цели указывается целочисленное значение защиты (например 9000 защиты). В разделе талантов, в скобках, например (I) или (III) указывается номер ветки талантов, что бы не возникало путаницы.</p>
-		<p>В случае возникших вопросов обращайтесь в Discord k1ber#0661</p>
+		<p>В случае возникших вопросов обращайтесь в Discord k1ber3301</p>
 		<h2>EN</h2>
 		<p>This calculator was created to calculate the damage of character skills. It takes into account the main stats, type of target and the talents. When calculating, an error of 1-2 times the damage is possible. This is not critical unless you are a nerd (lol).</p>
 		<p>When entering stats, type directly the numerical value of the percentage (for example, 30 ferocity). BUT, in the target protection input fields, type an integer value (for example, 9000 protection). In the talent section, in brackets, for example (I) or (III), the number of the talent branch, so that there is no confusion.</p>
-		<p>If you have any questions, please contact Discord k1ber#0661</p>
+		<p>If you have any questions, please contact Discord k1ber3301</p>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
